@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed outside label redraw damage areas (STR #2436)
 	- Added callback when double-clicking file in a file chooser
 	  (STR #2346)
 	- Fixed label alignment (STR #2436)
